# shirei

./: .env.release.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  README.md  SECURITY.md  biome.json  hud.html  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.html  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
mux/: Cargo.toml
mux/src/: lib.rs  lock.rs  main.rs  modes.rs  paths.rs  proc.rs  protocol.rs  ring.rs  server.rs  session.rs  shell.rs
patches/: @xterm__addon-webgl.patch
scripts/: build-mux.mjs  release.sh
src/: app.ts  colors.test.ts  colors.ts  commands.ts  config.ts  confirm.ts  craft.css  dates.test.ts  dates.ts  deepmerge.test.ts  deepmerge.ts  diag.test.ts  diag.ts  drag.ts  editor-astro.ts  editor-blame.ts  editor-conflict.test.ts  editor-conflict.ts  editor-livepreview.ts  editor-mdkeys.ts  editor-search.test.ts  editor-search.ts  editor-theme.test.ts  editor-theme.ts  editor.ts  errors.ts  filetree.ts  fonts.css  fonts.test.ts  fonts.ts  fuzzy.test.ts  fuzzy.ts  githistory.ts  hud.ts  i18n.test.ts  i18n.ts  icons.ts  image.ts  keymap.test.ts  keymap.ts  (+35 more)
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  sign-and-run.sh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  hud.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  dialog.rs  dock.rs  error.rs  fonts.rs  fs.rs  git.rs  lib.rs  logs.rs  main.rs  mux_client.rs  perf.rs  pty.rs  screencast.rs  session.rs  todos.rs  watch.rs
src/locales/: commands.en.ts  commands.es.ts  en.ts  errors.en.ts  errors.es.ts  es.ts  settings.en.ts  settings.es.ts  ui.en.ts  ui.es.ts
src/settings/: home.test.ts  nav-icons.ts  nav-keys.test.ts  nav-keys.ts  recorder.test.ts  recorder.ts  registry.test.ts  registry.ts  section-about.ts  section-advanced.ts  section-appearance.ts  section-editor.ts  section-git.ts  section-home.ts  section-performance.ts  section-projects.ts  section-recording.ts  section-session.ts  section-shortcuts.ts  section-tabs.ts  section-terminal.ts  section-theme.ts  shell.ts  themes.ts  widgets.ts
