[package]
name = "shirei-mux"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "shirei_mux"
path = "src/lib.rs"

[[bin]]
name = "shirei-mux"
path = "src/main.rs"

[dependencies]
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
anyhow = "1"
libc = "0.2"
libproc = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
